# eventpropagator

./: .gitignore  README.md  config.yaml  events.json  makefile  pyproject.toml
src/eventpropagator/: main.py  models.py  propagator.py  utils.py
tests/: test_propagator.py
